--- a/css/nav.css
+++ b/css/nav.css
@@ -334,7 +334,7 @@
 
 .bluer {
     width: 320px;
-    height: 98vh;
+    /*height: 98vh;*/
     background-color: rgba(100%, 100%, 100%, 1);
     display: grid;
 }
