--- a/css/nav.css
+++ b/css/nav.css
@@ -154,7 +154,8 @@
    }
 
    .footerNav {
-       margin-top: auto;
+       margin-top: 268px;
+       
        margin-bottom: 32px;
    }
 }
@@ -205,7 +206,7 @@
    }
 
    .footerNav {
-       margin-top: auto;
+       margin-top: 241px;
        margin-bottom: 32px;
    }
 }
