--- a/css/nav.css
+++ b/css/nav.css
@@ -46,34 +46,29 @@
        z-index: 15;
    }
 
-   .desktop {
-       -webkit-transform: translate(-100%);
-           -ms-transform: translate(-100%);
-               transform: translate(-100%);
-       -webkit-transition: 10s;
-       -o-transition: 10s;
-       transition: 10s;
-   }
-
    @media screen and (min-width: 320px) and (max-width: 359px) {
        .nav-hide {
+        -webkit-transform:translateX(1500px);
+    -ms-transform:translateX(1500px);
+        transform:translateX(1500px);
+-webkit-animation: roadRunnerIn 1.5s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards;
+        animation: roadRunnerIn 1.5s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards; 
            width: 100vw;
            height: 91vh;
            backdrop-filter: blur(5px);
-           -webkit-transform: translate(0px);
-               -ms-transform: translate(0px);
-                   transform: translate(0px);
        }
    }
 
    @media screen and (min-width: 360px) and (max-width: 767px) {
        .nav-hide {
+        -webkit-transform:translateX(1500px);
+        -ms-transform:translateX(1500px);
+            transform:translateX(1500px);
+    -webkit-animation: roadRunnerIn 1.5s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards;
+            animation: roadRunnerIn 1.5s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards; 
            width: 100vw;
            height: 91vh;
            backdrop-filter: blur(5px);
-           -webkit-transform: translate(0px);
-               -ms-transform: translate(0px);
-                   transform: translate(0px);
        }
    }
 
@@ -120,7 +115,6 @@
    }
 
    .sidebar-nav {
-
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
@@ -133,29 +127,22 @@
        margin-right: auto;
        position:absolute;
        z-index: 15;
-
-       -webkit-transform: translate(-100%);
-
-           -ms-transform: translate(-100%);
-
-               transform: translate(-100%);
-       -webkit-transition: 1s;
-       -o-transition: 1s;
-       transition: 1s;
    }
 
    .nav-hide {
+
+    -webkit-transform:translateX(1500px);
+    -ms-transform:translateX(1500px);
+        transform:translateX(1500px);
+-webkit-animation: roadRunnerIn 1.5s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards;
+        animation: roadRunnerIn 1.5s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards; 
        width: 100vw;
        height: 91vh;
        backdrop-filter: blur(5px);
-       -webkit-transform: translate(0px);
-           -ms-transform: translate(0px);
-               transform: translate(0px);
    }
 
    .footerNav {
        margin-top: 268px;
-       
        margin-bottom: 32px;
    }
 }
@@ -338,4 +325,61 @@
     /*height: 98vh;*/
     background-color: rgba(100%, 100%, 100%, 1);
     display: grid;
+}
+
+.desktop {
+    -webkit-transform:scale(-1);
+    -ms-transform:scale(-1);
+    transform:scale(-1);
+-webkit-animation: fadeIn 1s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards;
+    animation: fadeIn 1s cubic-bezier(0.165, 0.840, 0.440, 0.96) forwards; 
+}
+
+
+@-webkit-keyframes fadeIn {
+    0% {
+        background:rgba(100%, 100%, 100%,.0);
+    }
+    100% {
+        background:rgba(100%, 100%, 100%, 0.96);
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        background:rgba(100%, 100%, 100%,.0);
+    }
+    100% {
+        background:rgba(100%, 100%, 100%, 0.96);
+    }
+}
+
+@-webkit-keyframes roadRunnerIn {
+    0% {
+        -webkit-transform:translateX(-1500px) skewX(30deg) scaleX(1.3);
+                transform:translateX(-1500px) skewX(30deg) scaleX(1.3);
+    }
+    70% {
+        -webkit-transform:translateX(30px) skewX(0deg) scaleX(.9);
+                transform:translateX(30px) skewX(0deg) scaleX(.9);
+    }
+    100% {
+        -webkit-transform:translateX(0px) skewX(0deg) scaleX(1);
+                transform:translateX(0px) skewX(0deg) scaleX(1);
+    }
+}
+
+@keyframes roadRunnerIn {
+    0% {
+        -webkit-transform:translateX(-1500px) skewX(30deg) scaleX(1.3);
+                transform:translateX(-1500px) skewX(30deg) scaleX(1.3);
+    }
+    70% {
+        -webkit-transform:translateX(30px) skewX(0deg) scaleX(.9);
+                transform:translateX(30px) skewX(0deg) scaleX(.9);
+    }
+    100% {
+        -webkit-transform:translateX(0px) skewX(0deg) scaleX(1);
+                transform:translateX(0px) skewX(0deg) scaleX(1);
+    }
 }
